Content dump, very unstyled, experimenting with a few things

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -46,4 +46,4 @@ en:
         bio: Rubiest, internet Rambo, cheesemaker
 
   footer:
-    copyright: &copy; 2015, Sunburn
+    copyright: "&copy; 2015, Sunburn"
