Hugh Bio change.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -37,8 +37,8 @@ en:
     members:
       hugh_macready:
         name: Hugh Macready
-        twitter: hmacread
-        bio: UNHCR Alum, real-life Cisco kid, seafarer.
+        twitter: sdnbuzz
+        bio: Network wrangler, pythonista, seafarer.
 
       nicholas_bruning:
         name: Nicholas Bruning
