Changed header tagline.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   intro:
-    heading: We believe that complexity can be tamed by design.
+    heading: Great design can tame complexity.
     body: |
       By giving engineers the tools to build _scalable_, _testable_
       and _repeatable_ networks, we enable the next wave of
